--- a/src/app/user/register/register.component.scss
+++ b/src/app/user/register/register.component.scss
@@ -11,8 +11,8 @@
         border-radius: 0.50rem;
         display: flex;
         background-color: #FBFAF5;
-        height: 35rem;
-        width: 30rem;
+        height: 38rem;
+        width: 35rem;
         max-width: 90%;
         max-height: 93%;
         margin: auto;
@@ -20,9 +20,10 @@
         overflow: auto;
 
         .register-inputs-container {
-            width: 90%;
-            height: 70%;
+            width: 80%;
+            height: 80%;
             margin: auto;
+            // background-color: blue;
 
             .register-title {
                 width: 100%;
