Fixed some stuff form 1st PR and added username field to register form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
               (keydown.enter)="searchNonProfits(searchNonprofitValue.value)"
               placeholder="Search"
               type="text"
-              autocomplete="auto">     
+              autocomplete="off">     
 
 
             <mat-icon style="cursor: pointer;" (click)="searchNonProfits(searchNonprofitValue.value)" matSuffix>search</mat-icon>
