Added routing to about-us page, will fill in details now

--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -1,1 +1,8 @@
-@import '../styles/variables';
+
+.main-container {
+    display: flex; 
+    flex-direction: row;
+    min-height: 100%; 
+    flex: 1;
+    background-color: blue;
+} 
