Made member names link to individual capstone website pages, added some info

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,3 +1,62 @@
-<div class=main-container>
-    <h1>Hello world</h1>
-</div>>
+<div class="main-container">
+    <div class="whoAreWe">
+        <h2>Who are we?</h2>
+        <div class=member id=andrew>
+            <a href="https://capstone-csce.uark.edu/fall-spring-2020-2021/teams-6-10-f20/team-9-altrusight/andrew-he/"
+                class="memberName" target="_blank">Andrew He</a>
+            <p class="memberBio">Senior Computer Science major at the University of Arkansas</p>
+        </div>
+        <div class=member id=ben>
+            <a href="https://capstone-csce.uark.edu/fall-spring-2020-2021/teams-6-10-f20/team-9-altrusight/ben-guthrie/"
+                class="memberName" target="_blank">Ben Guthrie</a>
+            <p class="memberBio">Senior Computer Engineering major at the University of Arkansas</p>
+        </div>
+        <div class=member id=rafael>
+            <a href="https://capstone-csce.uark.edu/fall-spring-2020-2021/teams-6-10-f20/team-9-altrusight/rafael-toche-pizano/"
+                class="memberName" target="_blank">Rafael Toche Pizano</a>
+            <p class="memberBio">Senior Computer Science major at the University of Arkansas</p>
+        </div>
+        <div class=member id=seth>
+            <a href="https://capstone-csce.uark.edu/fall-spring-2020-2021/teams-6-10-f20/team-9-altrusight/seth-piepergerdes/"
+                class="memberName" target="_blank">Seth Piepergerdes</a>
+            <p class="memberBio">Senior Computer Science major at the University of Arkansas</p>
+        </div>
+        <div class=member id=tanner>
+            <a href="https://capstone-csce.uark.edu/fall-spring-2020-2021/teams-6-10-f20/team-9-altrusight/tanner-edwards/"
+                class="memberName" target="_blank">Tanner Edwards</a>
+            <p class="memberBio">Senior Computer Science major at the University of Arkansas</p>
+        </div>
+    </div> 
+
+    <div class="ourMission">
+        <h2>Our Mission</h2>
+        <p class="missionMessage">AltruSight’s goal is to implement a proof-of concept
+             website to serve as a beacon of transparency when it
+             comes to donating money to nonprofits. There are several 
+             main goals for our project. First, we want to provide a 
+             centralized system where donors can track how their 
+             donations are being used. We also wish to add a social 
+             aspect of donation in the form of a Venmo-esque payment 
+             feed, as well as the ability to favorite, share, like, 
+             etc. for any nonprofit supported on the website. We also
+             wish to ultimately provide a comprehensive analytics 
+             platform detailing how each nonprofit spends their money, 
+             as well as details on an individual level detailing personal 
+             goals and donations. </p>
+             
+        <p class="missionMessage">Ultimately, our objective is to create 
+             a system that makes it easier to hold nonprofits accountable 
+             and makes it easier for donors to see how their donations are 
+             being put to use, as well as providing relevant information 
+             on the legitimacy of nonprofits supported on the website. We 
+             want to be a central hub of information for all things 
+             nonprofit.</p>
+    </div>
+    <div class="whyAltrusight">
+        <h2>Why Altrusight?</h2>
+    </div>
+
+    <div class="footer">
+        <button class="signUp" (click)="navigateTo('register')">Sign Up</button>
+    </div>
+</div>
